<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textview_main_type_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/puzzle_main_type_2"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_title_sub" />

    <TextView
        android:id="@+id/textview_main_type_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/puzzle_main_type_3"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_title_sub" />

    <TextView
        android:id="@+id/textview_main_type_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/puzzle_main_type_4"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_title_sub" />

</LinearLayout>
